--- a/src/layout/breakpoints/breakpoints.module.scss
+++ b/src/layout/breakpoints/breakpoints.module.scss
@@ -3,13 +3,14 @@
   top: 10%;
   bottom: 90%;
   left: 50%;
-  z-index: 10000;
+  z-index: 99999;
 }
 
 .breakpoints .breakpoint {
+  color: white;
   background-color: gray;
-  opacity: 0.75;
-  transform: translate(-50%, -50%);
   padding: 0.5em 1em;
   border-radius: 1.88em;
+  opacity: 0.75;
+  transform: translate(-50%, -50%);
 }
