Improve the usability of the library Append the variables with a namespace Make the entry point index.ts Add my namespace to the libary name Add an author to the library

--- a/lib/components/CoverCarousel/styles.scss
+++ b/lib/components/CoverCarousel/styles.scss
@@ -16,7 +16,7 @@
 
 .slick-arrow::before, .slick-dots li button:before {
   font-weight: bold;
-  color: var(--heading-text-color, black) !important;
+  color: var(--tl-heading-text-color, black) !important;
 }
 
 .slick-dots li button:before {
