--- a/lib/components/MaskOverlay/styles.scss
+++ b/lib/components/MaskOverlay/styles.scss
@@ -1,5 +1,5 @@
 .maskOverlay {
-    background: var(--overlay-gradient, black);
+    background: var(--tl-overlay-gradient, black);
     position: absolute;
     width: 100%;
     height: 100%;
