--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
 @import "bootstrap/scss/bootstrap";
 @import "slick-carousel/slick/slick";
 @import "slick-carousel/slick/slick-theme";
+@import "../dist/styles.css";
