--- a/lib/components/Cover/style.scss
+++ b/lib/components/Cover/style.scss
@@ -16,7 +16,7 @@
 .coverImage {
   max-height: 100%;
   border: 1px solid transparent;
-  border-image: var(--cover-gradient, none) 1 fill;
+  border-image: var(--tl-cover-gradient, none) 1 fill;
   opacity: 0.5;
 }
 
@@ -26,11 +26,11 @@
   width: auto;
   height: 100%;
   border: 1px solid transparent;
-  border-image: var(--cover-gradient, none) 1 fill;
+  border-image: var(--tl-cover-gradient, none) 1 fill;
 }
 
 .coverText {
-  color: var(--cover-text-color, black);
+  color: var(--tl-cover-text-color, black);
   position: absolute;
   top: 50%;
   left: 50%;
