Add an example carousel

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,4 @@
 @import "slick-carousel/slick/slick";
 @import "slick-carousel/slick/slick-theme";
 @import "../lib/styles";
+@import "assets/stylesheets/styles";
