--- a/lib/components/CoverSlider/CoverSlider.scss
+++ b/lib/components/CoverSlider/CoverSlider.scss
@@ -1,10 +1,10 @@
-#slider-container {
+.slider-container {
   width: 100%;
   height: 100%;
 }
 
 .slick-slider {
-  width: calc(100% - 3em);
+  width: calc(100% - 3.5em);
   padding: 1.5em;
 }
 
@@ -43,16 +43,4 @@
 
 .slick-arrow.slick-prev {
   margin: 0 0 0 1em;
-}
-
-#slider-container > div > div > div > div > div {
-  height: 100%;
-}
-
-#slider-container > div > div > div > div.slick-slide.slick-active.slick-current {
-  height: 100%;
-}
-
-#slider-container > div > div > div > div.slick-slide.slick-active.slick-current > div > div {
-  height: 100%;
 }
