--- a/lib/components/Cover/Cover.scss
+++ b/lib/components/Cover/Cover.scss
@@ -3,36 +3,47 @@
 @import "bootstrap/scss/mixins";
 
 .cover {
-  position: relative;
-  height: 100%;
+  height: 100% !important;
+}
+
+.cover .row, .cover .col {
+  display: flex;
+  height: 100% !important;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
 }
 
 .cover h1 {
   font-size: 2em;
   font-weight: bolder;
   text-align: center;
+  vertical-align: middle;
 }
 
 .coverImage {
-  width: auto;
   max-height: 100%;
-  border: 1px solid transparent;
-  border-image: var(--tl-cover-gradient, none) 1 fill;
-  opacity: 0.5;
-}
-
-.coverOverlay {
-  display: block;
-  width: auto;
-  height: 100%;
 }
 
 .coverText {
   color: var(--tl-cover-text-color, black);
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+}
+
+.coverOverlay {
+  position: relative;
+}
+
+.coverOverlay::before {
+  background-image: var(--tl-cover-gradient, transparent);
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0.35;
+  z-index: 100;
 }
 
 @include media-breakpoint-up(sm) {
