--- a/lib/components/CoverSlider/CoverSlider.scss
+++ b/lib/components/CoverSlider/CoverSlider.scss
@@ -1,20 +1,16 @@
 .slider-container {
-  width: 100%;
-  height: 100%;
+  height: calc(100% - 25px);
 }
 
 .slick-slider {
   width: calc(100% - 3.5em);
+  margin: auto;
   padding: 1.5em;
 }
 
 .slick-slider, .slick-list, .slick-track {
   height: 100%;
   margin: auto;
-}
-
-.slick-list, .slick-track {
-  width: 100%;
 }
 
 .slick-arrow::before, .slick-dots li button::before {
@@ -43,4 +39,8 @@
 
 .slick-arrow.slick-prev {
   margin: 0 0 0 1em;
+}
+
+div.slider-container div.slick-slide.slick-active.slick-current > div {
+  height: 100%;
 }
