--- a/lib/styles.scss
+++ b/lib/styles.scss
@@ -1,6 +1,9 @@
 /* General */
 html, body {
-    width: 100%;
-    height: 97%;
-    padding: 0;
+    height: 100%;
+    padding: 0 0 0.5em 0;
+}
+
+#root {
+    height: 100%;
 }
