--- a/lib/components/CoverSlider/CoverSlider.scss
+++ b/lib/components/CoverSlider/CoverSlider.scss
@@ -41,6 +41,6 @@
   margin: 0 0 0 1em;
 }
 
-div.slider-container div.slick-slide.slick-active.slick-current > div {
+.slider-container div {
   height: 100%;
 }
