--- a/lib/components/Cover/Cover.scss
+++ b/lib/components/Cover/Cover.scss
@@ -6,13 +6,15 @@
   height: 100%;
 }
 
+/*
 .cover .row, .cover .col {
   display: flex;
   height: 100% !important;
-  align-items: center;
+  //align-items: center;
   align-content: center;
   justify-content: center;
 }
+*/
 
 .cover h1 {
   font-size: 2em;
@@ -21,18 +23,25 @@
 }
 
 .coverOverlay {
-  position: relative;
-  display: block;
-  width: auto;
-  height: 100%;
+  //position: relative;
+  //display: flex;
+  //margin: auto;
+  //width: auto;
+  //height: 100%;
 }
 
 .coverImage {
-  width: auto;
-  max-height: 100%;
+  //width: auto;
+  //height: 100%;
+  //max-height: 100%;
   border: 0 solid transparent;
   border-image: var(--tl-cover-gradient, none) 1 fill;
   opacity: 0.5;
+}
+
+img {
+  object-fit: scale-down;
+  object-position: top left !important;
 }
 
 .coverText {
