Slider working again Capped the height of the image at 450px Don't set the columns height to 100% Decrease the width of the slider Set the height of the div before the cover image container Put back media queries Remove unused code

--- a/lib/components/CoverSlider/CoverSlider.scss
+++ b/lib/components/CoverSlider/CoverSlider.scss
@@ -3,7 +3,7 @@
 }
 
 .slick-slider {
-  width: calc(100% - 3.5em);
+  width: calc(100% - 3em);
   margin: auto;
   padding: 1.5em;
 }
@@ -41,6 +41,6 @@
   margin: 0 0 0 1em;
 }
 
-.slider-container div {
+div.slider-container div.slick-slide.slick-active.slick-current > div {
   height: 100%;
 }
