--- a/lib/components/Cover/Cover.scss
+++ b/lib/components/Cover/Cover.scss
@@ -4,17 +4,8 @@
 
 .cover {
   height: 100%;
+  position: relative;
 }
-
-/*
-.cover .row, .cover .col {
-  display: flex;
-  height: 100% !important;
-  //align-items: center;
-  align-content: center;
-  justify-content: center;
-}
-*/
 
 .cover h1 {
   font-size: 2em;
@@ -22,26 +13,24 @@
   text-align: center;
 }
 
-.coverOverlay {
-  //position: relative;
-  //display: flex;
-  //margin: auto;
-  //width: auto;
-  //height: 100%;
-}
-
-.coverImage {
-  //width: auto;
-  //height: 100%;
-  //max-height: 100%;
+.cover img {
+  width: auto;
+  height: 100%;
+  max-width: 100%;
+  max-height: 450px;
   border: 0 solid transparent;
   border-image: var(--tl-cover-gradient, none) 1 fill;
   opacity: 0.5;
 }
 
-img {
-  object-fit: scale-down;
-  object-position: top left !important;
+.cover .row, .cover .col {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cover .row {
+  height: 100%;
 }
 
 .coverText {
@@ -50,4 +39,16 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+@include media-breakpoint-up(sm) {
+  .cover h1 {
+    font-size: 3em;
+  }
+}
+
+@include media-breakpoint-up(md) {
+  .cover h1 {
+    font-size: 4em;
+  }
 }
