--- a/lib/layout/Breakpoints/Breakpoints..scss
+++ b/lib/layout/Breakpoints/Breakpoints..scss
@@ -9,8 +9,8 @@
 .breakpoints .breakpoint {
   color: white;
   background-color: gray;
-  padding: 0.5em 1em;
-  border-radius: 1.88em;
+  padding: 0.5rem 1rem;
+  border-radius: 1.88rem;
   opacity: 0.75;
   transform: translate(-50%, -50%);
 }
