--- a/lib/components/Cover/Cover.scss
+++ b/lib/components/Cover/Cover.scss
@@ -8,7 +8,7 @@
 }
 
 .cover h1 {
-  font-size: 2em;
+  font-size: 2rem;
   font-weight: bolder;
   text-align: center;
 }
@@ -43,12 +43,12 @@
 
 @include media-breakpoint-up(sm) {
   .cover h1 {
-    font-size: 3em;
+    font-size: 3rem;
   }
 }
 
 @include media-breakpoint-up(md) {
   .cover h1 {
-    font-size: 4em;
+    font-size: 4rem;
   }
 }
