Attempt to get the target centered

--- a/lib/components/CoverSlider/CoverSlider.scss
+++ b/lib/components/CoverSlider/CoverSlider.scss
@@ -9,6 +9,7 @@
 }
 
 .slider-container .slick-slider,
+.slider-container .slick-slide,
 .slider-container .slick-list,
 .slider-container .slick-track {
   height: 100%;
