Target centers again

--- a/lib/components/CoverSlider/CoverSlider.scss
+++ b/lib/components/CoverSlider/CoverSlider.scss
@@ -57,5 +57,6 @@ div.slider-container div.slick-slide.slick-active.slick-current {
 }
 
 div.slider-container div.slick-slide.slick-active.slick-current > div {
+  display: flex;
   height: 100%;
 }
