--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 @import "bootstrap/scss/bootstrap";
 @import "slick-carousel/slick/slick";
 @import "slick-carousel/slick/slick-theme";
-@import "../dist/styles";
+@import "../lib/styles";
 @import "assets/stylesheets/styles";
