--- a/lib/components/Cover/Cover.scss
+++ b/lib/components/Cover/Cover.scss
@@ -4,35 +4,16 @@
 
 .cover {
   position: relative;
-  height: 100%;
-}
-
-.cover h1 {
-  font-size: 2rem;
-  font-weight: bolder;
-  text-align: center;
-}
-
-.cover img {
-  width: 100%;
-  height: auto;
-  max-height: 450px;
-  margin-top: auto;
-  margin-bottom: auto;
-  border: 0 solid transparent;
-  border-image: var(--tl-cover-gradient, none) 1 fill;
-  object-fit: scale-down;
-  opacity: 0.5;
+  display: flex;
+  flex-direction: column;
+  flex: auto;
 }
 
 .cover .row, .cover .col {
   display: flex;
+  flex: auto;
   align-items: center;
   justify-content: center;
-}
-
-.cover .row {
-  height: 100%;
 }
 
 .coverText {
@@ -43,14 +24,48 @@
   transform: translate(-50%, -50%);
 }
 
+h1.coverText {
+  font-size: 2rem;
+  font-weight: bolder;
+  text-align: center;
+}
+
+.coverImage {
+  display: flex;
+  flex: auto;
+  align-items: center;
+  justify-content: center;
+}
+
+.coverImage img {
+  width: 100%;
+  height: auto;
+  max-height: 450px;
+  object-fit: scale-down;
+}
+
+/*
+.coverImage::before {
+  position: absolute;
+  background-image: var(--tl-cover-gradient);
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0.3;
+  z-index: 10;
+}
+*/
+
 @include media-breakpoint-up(sm) {
-  .cover h1 {
+  h1.coverText {
     font-size: 3rem;
   }
 }
 
 @include media-breakpoint-up(md) {
-  .cover h1 {
+  h1.coverText {
     font-size: 4rem;
   }
 }
