--- a/src/assets/stylesheets/styles.scss
+++ b/src/assets/stylesheets/styles.scss
@@ -13,6 +13,11 @@ body {
     background-image: url("/assets/images/background.png");
 }
 
+/* Standard */
+main {
+    height: 100%;
+}
+
 /* Headings */
 h1 {
     font-family: $heading-text-font-family;
