Add styles for background

--- a/src/assets/stylesheets/styles.scss
+++ b/src/assets/stylesheets/styles.scss
@@ -10,7 +10,9 @@ html, body {
 }
 
 body {
-    background-image: url("/assets/images/background.png");
+    background-repeat: repeat;
+    background-attachment: scroll;
+    background-size: contain;
 }
 
 /* Standard */
